# sdl-test

./: CMakeLists.txt  mario.pixil
include/: SDL_Shape.h  SDL_Wrap.h  mymath.h  player.h
res/: physics.cpp  physics.h
src/: SDL_Shape.cpp  SDL_Wrap.cpp  main.cpp  mymath.cpp
